--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<%= link_to("Home", root_path) %>
+<br>
+<% if current_admin %>
+<%= link_to("Log out", destroy_admin_session_path) %>
+<%else %>
+<%= link_to("Log in", admin_session_path) %>
+<%end%>
 <%= yield %>
 
 </body>
