--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,11 @@
 </head>
 <body>
 <%= link_to("Home", root_path) %>
-<br>
+
 <% if current_admin %>
 <%= link_to("Log out", destroy_admin_session_path) %>
 <%else %>
-<%= link_to("Log in", admin_session_path) %>
+<%= link_to("Log in(for admins)", admin_session_path) %>
 <%end%>
 <%= yield %>
 
