--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,17 @@
 
 <% if current_admin %>
 <%= link_to("Log out", destroy_admin_session_path) %>
-<%else %>
+<%= link_to("Register new driver", new_driver_registration_path) %>
+<%elsif !current_driver %>
 <%= link_to("Log in(for admins)", admin_session_path) %>
 <%end%>
+<% if  current_driver %>
+<%= link_to("Log out", destroy_driver_session_path) %>
+<%elsif !current_admin %>
+<%= link_to("Drivers: Log in", driver_session_path) %>
+<%end%>
+
+
 <%= yield %>
 
 </body>
