--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -31,9 +31,15 @@
 </p>
 
 <p>
-  <strong>Rote:</strong>
-  <%= @order.rote %>
+  <strong>AdresFrom:</strong>
+  <%= @order.AdresFrom %>
 </p>
+
+<p>
+  <strong>AdresTo:</strong>
+  <%= @order.AdresTo %>
+</p>
+
 
 <p>
   <strong>Number of passengers:</strong>
