--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -11,7 +11,8 @@
       <th>Comment</th>
       <th>Phone number</th>
       <th>Email</th>
-      <th>Rote</th>
+      <th>Adres From</th>
+      <th>Adres To</th>
       <th>Number of passengers</th>
       <th>Date of trip</th>
       <th colspan="3"></th>
@@ -27,7 +28,8 @@
         <td><%= order.comment %></td>
         <td><%= order.phone_number %></td>
         <td><%= order.email %></td>
-        <td><%= order.rote %></td>
+        <td><%= order.AdresFrom %></td>
+        <td><%= order.AdresTo %></td>
         <td><%= order.number_of_passengers %></td>
         <td><%= order.date_of_trip %></td>
         <td><%= link_to 'Show', order %></td>
