--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the Orders controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.case4 {
+  background-color: #00FF7F;
+}
+.case3 {
+  background-color: #FFFF00;
+}
+.case1 {
+  background-color: #FF0000;
+}
