--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -3,45 +3,8 @@
 <h1>Текущие заказы</h1>
 
   <table id="data-table" border ="1" rules ='rows'></table>
-<script type="text/javascript" src="myScript/orders.js"></script>
-<!-- <table id="table-order">
-  <thead>
-    <tr>
-      <th>Dispatcher</th>
-      <th>Driver</th>
-      <th>Status</th>
-      <th>Comment</th>
-      <th>Phone number</th>
-      <th>Email</th>
-      <th>Adres From</th>
-      <th>Adres To</th>
-      <th>Number of passengers</th>
-      <th>Date of trip</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-  <tbody>
-
-    <% @orders.each do |order| %>
-      <tr>
-        <td><%= order.dispatcher_id %></td>
-        <td><%= order.driver_id %></td>
-        <td><%= order.status %></td>
-        <td><%= order.comment %></td>
-        <td><%= order.phone_number %></td>
-        <td><%= order.email %></td>
-        <td><%= order.AdresFrom %></td>
-        <td><%= order.AdresTo %></td>
-        <td><%= order.number_of_passengers %></td>
-        <td><%= order.date_of_trip %></td>
-        <td><%= link_to 'Show', order %></td>
-        <td><%= link_to 'Edit', edit_order_path(order) %></td>
-        <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table> -->
-
+  <%= javascript_include_tag('orders.js') %>
+  <%= stylesheet_link_tag "orders" %>
 <br>
 
 <%= link_to 'New Order', new_order_path %>
