--- a/app/views/drivers/registrations/new.html.erb
+++ b/app/views/drivers/registrations/new.html.erb
@@ -23,32 +23,32 @@
 
   <div class="field">
     <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.text_field :name, autocomplete: "off" %>
   </div>
 
   <div class="field">
     <%= f.label :phone_number_string %><br />
-    <%= f.text_field :phone_number_string %>
+    <%= f.text_field :phone_number_string, autocomplete: "off" %>
   </div>
 
   <div class="field">
     <%= f.label :license_plate %><br />
-    <%= f.text_field :license_plate %>
+    <%= f.text_field :license_plate, autocomplete: "off" %>
   </div>
 
   <div class="field">
     <%= f.label :car_model %><br />
-    <%= f.text_field :car_model %>
+    <%= f.text_field :car_model, autocomplete: "off" %>
   </div>
 
   <div class="field">
     <%= f.label :car_color %><br />
-    <%= f.text_field :car_color %>
+    <%= f.text_field :car_color, autocomplete: "off" %>
   </div>
 
   <div class="field">
     <%= f.label :car_type %><br />
-    <%= f.text_field :car_type %>
+    <%= f.text_field :car_type, autocomplete: "off" %>
   </div>
 
   <div class="actions">
