--- a/app/views/drivers/registrations/new.html.erb
+++ b/app/views/drivers/registrations/new.html.erb
@@ -27,7 +27,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :phone_number_string %><br />
+    <%= f.label :phone_number %><br />
     <%= f.text_field :phone_number_string, autocomplete: "off" %>
   </div>
 
