--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,9 @@
 </head>
 <body>
 <%= link_to("Home", root_path) %>
+<% if current_admin || current_dispatcher || current_driver %>
 <%= link_to("Orders", orders_path) %>
-
+<% end %>
 
 <% if current_admin %>
 <%= link_to("Log out", destroy_admin_session_path) %>
@@ -21,7 +22,7 @@
 <%end%>
 
 <% if  current_dispatcher %>
-<%= link_to("Log out", destroy_dispatcher_session_path) %>
+<%= link_to("Log out as dispatcher", destroy_dispatcher_session_path) %>
 <%elsif !current_admin && !current_driver %>
 <%= link_to("Dispatchers: Log in", driver_session_path) %>
 <%end%>
