--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,16 +8,27 @@
 </head>
 <body>
 <%= link_to("Home", root_path) %>
+<%= link_to("Orders", orders_path) %>
+
 
 <% if current_admin %>
 <%= link_to("Log out", destroy_admin_session_path) %>
+<%= link_to("Register new admin", new_admin_registration_path) %>
+<%= link_to("Register new dispatcher", new_dispatcher_registration_path) %>
 <%= link_to("Register new driver", new_driver_registration_path) %>
-<%elsif !current_driver %>
+<%elsif !current_driver && !current_dispatcher %>
 <%= link_to("Admins: Log in", admin_session_path) %>
 <%end%>
+
+<% if  current_dispatcher %>
+<%= link_to("Log out as dispatcher", destroy_dispatcher_session_path) %>
+<%elsif !current_admin && !current_driver %>
+<%= link_to("Dispatchers: Log in", driver_session_path) %>
+<%end%>
+
 <% if  current_driver %>
-<%= link_to("Log out", destroy_driver_session_path) %>
-<%elsif !current_admin %>
+<%= link_to("Log out as driver", destroy_driver_session_path) %>
+<%elsif !current_admin && !current_dispatcher %>
 <%= link_to("Drivers: Log in", driver_session_path) %>
 <%end%>
 
