--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -22,7 +22,7 @@
   </div>
   <div class="field">
     <%= f.label 'Количество пассажиров' %><br>
-    <%= f.number_field :number_of_passengers %>
+    <%= f.number_field :number_of_passengers, :value => 1 %>
   </div>
   <div class="field">
     <%= f.label 'Укажите дату и время поездки' %><br>
