--- a/app/views/orders/_edit_form.html.erb
+++ b/app/views/orders/_edit_form.html.erb
@@ -12,19 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :dispatcher_id %><br>
-    <%= f.number_field :dispatcher_id %>
-  </div>
-  <div class="field">
-    <%= f.label :driver_id %><br>
+    <%= f.label 'Водитель' %><br>
     <%= f.number_field :driver_id %>
   </div>
   <div class="field">
-    <%= f.label :status %><br>
-    <%= f.number_field :status %>
-  </div>
-  <div class="field">
-    <%= f.label :comment %><br>
+    <%= f.label 'Комментарий' %><br>
     <%= f.text_area :comment %>
   </div>
 
@@ -37,15 +29,15 @@
     <%= f.text_field :AdresTo %>
   </div>
   <div class="field">
-    <%= f.label :number_of_passengers %><br>
+    <%= f.label 'Количество пассажиров' %><br>
     <%= f.number_field :number_of_passengers %>
   </div>
   <div class="field">
-    <%= f.label :date_of_trip %><br>
+    <%= f.label 'Дата и время поездки' %><br>
     <%= f.datetime_select :date_of_trip %>
   </div>
   <div class="field">
-    <%= f.label :phone_number %><br>
+    <%= f.label 'Контактный номер' %><br>
     <%= f.text_field :phone_number %>
   </div>
   <div class="field">
