--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,10 +1,29 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Текущие заказы</h1>
-
-  <table id="data-table" border ="1" rules ='rows'></table>
+<%= link_to 'Новый заказ', new_order_path %>
+<br>
+  <table id="data-table" class = "one" border=1 rules=rows></table>
   <%= javascript_include_tag('orders.js') %>
   <%= stylesheet_link_tag "orders" %>
-<br>
+  <table id="driver-table" class = "two" border=1 rules=rows>
+    <thead>
+      <tr>
+        <th>Id</th>
+        <th>Имя</th>
+        <th>Номер телефона</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @drivers.each do |driver| %>
+        <tr>
+          <td><%= driver.id %></td>
+          <td><%= driver.name %></td>
+          <td><%= driver.phone_number_string %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Order', new_order_path %>
+
+
