--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,6 @@
 
 <% if current_admin %>
 <%= link_to("Log out", destroy_admin_session_path) %>
-<%= link_to("Register new admin", new_admin_registration_path) %>
-<%= link_to("Register new dispatcher", new_dispatcher_registration_path) %>
-<%= link_to("Register new driver", new_driver_registration_path) %>
 <%elsif !current_driver && !current_dispatcher %>
 <%= link_to("Admins: Log in", admin_session_path) %>
 <%end%>
@@ -24,12 +21,12 @@
 <% if  current_dispatcher %>
 <%= link_to("Log out as dispatcher", destroy_dispatcher_session_path) %>
 <%elsif !current_admin && !current_driver %>
-<%= link_to("Dispatchers: Log in", driver_session_path) %>
+<%= link_to("Dispatchers: Log in", dispatcher_session_path) %>
 <%end%>
 
-<% if  current_driver %>
-<%= link_to("Log out", destroy_driver_session_path) %>
-<%elsif !current_admin && !current_dispatcher %>
+<% if !current_admin && !current_dispatcher %>
+<%= link_to("Log out as a driver", destroy_driver_session_path) %>
+<%elsif current_driver  %>
 <%= link_to("Drivers: Log in", driver_session_path) %>
 <%end%>
 
