Order updated (date, call, driver_id)

--- a/app/assets/stylesheets/orders.css.scss
+++ b/app/assets/stylesheets/orders.css.scss
@@ -3,13 +3,13 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .newOrder {
-  background-color: #00FF7F;
+  background-color: #BCF5A9;
 }
 .warning {
-  background-color: #FFFF00;
+  background-color: #F3F781;
 }
 .strongWarning {
-  background-color: #FF0000;
+  background-color: #FFDAB9;
 }
 .orderHead {
   background-color: #DCDCDC;
