--- a/app/views/orders/_edit_form.html.erb
+++ b/app/views/orders/_edit_form.html.erb
@@ -10,10 +10,34 @@
       </ul>
     </div>
   <% end %>
+  <table id="driver-table" class = "two" border=1 rules=rows>
+      <thead>
+      <tr>
+        <th>Статус</th>
+        <th>ID</th>
+        <th>Имя</th>
+        <th>Номер телефона</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @drivers.each do |driver| %>
+        <tr>
+          <td><%= status_string(driver.status) %></td>
+          <td><%= driver.id %></td>
+          <td><%= driver.name %></td>
+          <td><%= driver.phone_number_string %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-  <div class="field">
+  <!--<div class="field">
     <%= f.label 'Водитель' %><br>
     <%= f.number_field :driver_id %>
+  </div>-->
+  <div class="field">
+    <%= f.label 'Водитель' %><br>
+    <%= f.collection_select(:driver_id, @drivers, :id, :name) %>
   </div>
   <div class="field">
     <%= f.label 'Комментарий' %><br>
@@ -34,7 +58,12 @@
   </div>
   <div class="field">
     <%= f.label 'Дата и время поездки' %><br>
-    <%= f.datetime_select :date_of_trip %>
+    <!--<%= f.datetime_select :date_of_trip %>-->
+    <div class="row">
+      <div class='col-sm-6'>
+          <%= f.text_field :date_of_trip,  :class=>'form-control', :id=>'datetimepicker4' %>
+      </div>
+    </div>
   </div>
   <div class="field">
     <%= f.label 'Контактный номер' %><br>
