--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -2,5 +2,8 @@
 
 <%= render 'edit_form' %>
 
+  <%= stylesheet_link_tag "orders" %>
+
+
 <%= link_to 'Show', @order %> |
 <%= link_to 'Back', orders_path %>
