--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -26,7 +26,13 @@
   </div>
   <div class="field">
     <%= f.label 'Укажите дату и время поездки' %><br>
-    <%= f.datetime_select :date_of_trip %>
+    <noscript><%= f.datetime_select :date_of_trip %></noscript>
+      <div class="row">
+          <div class='col-sm-6'>
+              <%= f.text_field :date_of_trip, :class=>'form-control hide_if_no_js', :id=>'datetimepicker4' %>
+          </div>
+          <%= javascript_include_tag('datetime.js') %>
+      </div>
   </div>
   <div class="field">
     <%= f.label 'Здесь вы можете указать дополнительную информацию' %><br>
@@ -41,6 +47,7 @@
     <%= f.text_field :email %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Подтвердить заказ', :class=>"btn btn-success"%>
+    <a href="tel:12345678" class = "btn btn-primary">Позвонить диспетчеру</a>
   </div>
 <% end %>
