--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -9,7 +9,8 @@
   <table id="driver-table" class = "two" border=1 rules=rows>
     <thead>
       <tr>
-        <th>Id</th>
+        <th>Статус</th>
+        <th>ID</th>
         <th>Имя</th>
         <th>Номер телефона</th>
       </tr>
@@ -17,6 +18,7 @@
     <tbody>
       <% @drivers.each do |driver| %>
         <tr>
+          <td><%= status_string(driver.status) %></td>
           <td><%= driver.id %></td>
           <td><%= driver.name %></td>
           <td><%= driver.phone_number_string %></td>
