--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,5 +1,6 @@
 <h1>Добро пожаловать в нашу службу такси</h1>
 
 <%= render 'form' %>
-
+<% if current_dispatcher %>
 <%= link_to 'Back', orders_path %>
+<% end %>
